--- a/app/src/main/res/layout/status_row.xml
+++ b/app/src/main/res/layout/status_row.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -43,7 +44,8 @@
         android:id="@+id/tv_get_nextrun"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/tv_get_result"
+        android:layout_marginStart="16dp"
+        app:layout_constraintStart_toEndOf="@+id/tv_next_run"
         app:layout_constraintTop_toTopOf="@+id/tv_next_run" />
 
     <TextView
@@ -51,12 +53,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="@+id/tv_get_result"
+        app:layout_constraintStart_toStartOf="@+id/tv_get_nextrun"
         app:layout_constraintTop_toBottomOf="@+id/tv_get_nextrun" />
 
     <TextView
         android:id="@+id/tv_next_run"
-        android:layout_width="60dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
@@ -66,8 +68,8 @@
 
     <TextView
         android:id="@+id/tv_last_run"
-        android:layout_width="60dp"
-        android:layout_height="17dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/last_run"
         app:layout_constraintStart_toStartOf="@+id/tv_next_run"
